<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup.SignUpActivity">

    <EditText
        android:id="@+id/edit_text_new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_72"
        android:layout_marginTop="@dimen/dp_52"
        android:ems="10"
        android:hint="@string/string_user_name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_login" />

    <EditText
        android:id="@+id/edit_text_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_72"
        android:layout_marginTop="@dimen/dp_52"
        android:ems="10"
        android:hint="@string/string_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_new_user" />

    <EditText
        android:id="@+id/edit_text_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_72"
        android:layout_marginTop="@dimen/dp_52"
        android:ems="10"
        android:hint="@string/string_confirm"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_new_password" />

    <TextView
        android:id="@+id/text_title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_56"
        android:layout_marginTop="@dimen/dp_32"
        android:text="@string/string_sign_up"
        android:textSize="@dimen/dp_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_56"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/string_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_confirm_password"
        app:layout_constraintVertical_bias="0.5" />

</android.support.constraint.ConstraintLayout>
